//
// Copyright 2022 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.functions.standalone;

import "proto/session/session.proto";

// Oak Functions service that utilizes the Oak Session Protocol.
service OakFunctionsSession {
  // Bidirectional streaming RPCs for the Oak Session framework that uses the
  // Noise Protocol NN standard.
  rpc OakSession(stream OakSessionRequest) returns (stream OakSessionResponse) {
  }
}

message OakSessionRequest {
  oak.session.v1.SessionRequest request = 1;
}

message OakSessionResponse {
  oak.session.v1.SessionResponse response = 1;
}
